# linksmith

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/workflows/: rust-pr.yml  rust.yml
src/: main.rs
